--- a/task1/mmotion-index.html
+++ b/task1/mmotion-index.html
@@ -3,8 +3,8 @@
         <title>My Armageddon Webpage</title>
     </head>
     <body>
-        <h1>I need coffee. Is it over yet?</h1>
-        <p>Hello world!</p>
+        <h1>Welcome to my Task 1 My Armageddon Webpage!</h1>
+        <p>I need coffee. Is it over yet?</p>
     </body>
 
     <img src="coffee.jpg" width=500/>
